[metadata]
name = jupyter-jobstorm
version = 0.4.0
license = MIT
author = schrodingers-koala
author_email = schrodingers.koala@gmail.com
url = https://github.com/schrodingers-koala/jupyter-jobstorm
description = A tool to run a function written in Jupyter cell as a job
long_description = file: README.md
long_description_content_type = text/markdown
keywords= jupyter-jobstorm, jobstorm
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    dill
    python-jenkins
    tabulate
